--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <a class="nav-item nav-link active" href="index.html">Elevkveld <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="opplegg.html">Opplegg</a>
                     <a class="nav-item nav-link" href="http://ent3r.no">ENT3R.no</a>
+                    <a class="nav-item nav-link" href="https://www.instagram.com/ent3r_trondheim/?hl=nb">Instagram</a>
                 </div>
             </div>
         </nav>
