--- a/opplegg.html
+++ b/opplegg.html
@@ -24,6 +24,7 @@
                     <a class="nav-item nav-link " href="index.html">Elevkveld</a>
                     <a class="nav-item nav-link active" href="opplegg.html">Opplegg<span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="http://ent3r.no">ENT3R.no</a>
+                    <a class="nav-item nav-link" href="https://www.instagram.com/ent3r_trondheim/?hl=nb">Instagram</a>
                 </div>
             </div>
         </nav>
