--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <p class="lead">Send en melding med "Elevkveld" til 1930.<br/> For avmelding send
                     "Elevkveld stopp" til 1930
                 </p>
+                <a href="sms:1930&body=Elevkveld" class="btn btn-primary mobile påmelding-btn">Påmelding</a>
             </div>
             <iframe class="mazemap" src="https://use.mazemap.com/#v=1&zlevel=-1&center=10.404623,63.415578&zoom=18&campusid=1&sharepoitype=poi&sharepoi=2035">
             </iframe>
