Added new tab to some buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="index.html">Elevkveld <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="opplegg.html">Opplegg</a>
-                    <a class="nav-item nav-link" href="http://ent3r.no">ENT3R.no</a>
-                    <a class="nav-item nav-link" href="https://www.instagram.com/ent3r_trondheim/?hl=nb">Instagram</a>
+                    <a class="nav-item nav-link" target="_blank" href="http://ent3r.no">ENT3R.no</a>
+                    <a class="nav-item nav-link" target="_blank" href="https://www.instagram.com/ent3r_trondheim/?hl=nb">Instagram</a>
                 </div>
             </div>
         </nav>
