Fixed spelling error

--- a/opplegg.html
+++ b/opplegg.html
@@ -40,7 +40,7 @@
         <h1 class="header mobile display-2">Konkurranse</h1>
 
         <div>
-            <h2 class="display-4 title">Programering!</h2>
+            <h2 class="display-4 title">Programmering!</h2>
             <hr class="break">
         </div>
         <div class="info-opplegg-container">
